[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main/Main_UI.gd" type="Script" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Menu_UI/Multiplayer/Join_game_dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu_UI/Multiplayer/Host_game_dialog.tscn" type="PackedScene" id=4]


[node name="MultiplayerUI" type="Control"]
anchor_top = 0.3
anchor_right = 0.2
anchor_bottom = 0.3
margin_left = 1.75812
margin_top = 0.0925329
margin_right = 1.75812
margin_bottom = 0.0924683
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="VBC"]
margin_right = 120.0
margin_bottom = 22.6
disabled = true
text = "HOST"

[node name="Join" type="Button" parent="VBC"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 46.6
disabled = true
text = "JOIN"

[node name="Play_offline" type="Button" parent="VBC"]
margin_top = 48.0
margin_right = 120.0
margin_bottom = 70.6
text = "PLAY_OFFLINE"

[node name="Host_game_dialog" parent="." instance=ExtResource( 4 )]

[node name="Join_game_dialog" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="VBC/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBC/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBC/Play_offline" to="." method="_on_Play_offline_pressed"]
